syntax = "proto3";
package tokenizer;
option go_package = "./pb";

message TokenizerReq {
  string prompt = 1;
}

message TokenizerResp {
  repeated uint64 token_ids = 1;
  repeated uint64 token_type_ids = 2;
}

message DeTokenizerReq {
  repeated uint64 token_ids = 1;
}

message DeTokenizerResult {
  string text = 1;
}

service TokenizerService {
  rpc Tokenizer(TokenizerReq) returns (TokenizerResp);
  rpc DeTokenizer(DeTokenizerReq) returns (DeTokenizerResult);
}